kubernetes/apps/base/ollama/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: open-webui
  namespace: ollama
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`open-webui.local`)
      kind: Rule
      services:
        - name: open-webui-main
          port: 8080
      middlewares:
        - name: default-headers
          namespace: traefik
  tls:
    secretName: open-webui-tls
